# serializer version: 1
# name: TestRelatedActorsQuery.test_query_related_people_control
  '''
  
  SELECT DISTINCT pdi.person_id
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  WHERE team_id = 99999
    AND timestamp > '2024-12-01T12:00:00.000000'
    AND timestamp < '2025-03-01T12:00:00.000000'
    AND $group_0 = 'org:1'
  '''
# ---
# name: TestRelatedActorsQuery.test_query_related_people_optimized
  '''
  
  SELECT DISTINCT argMax(person_id, version) AS person_id
  FROM person_distinct_id2
  WHERE team_id = 99999
    AND distinct_id IN
      (SELECT distinct_id
       FROM events
       WHERE team_id = 99999
         AND timestamp > '2024-12-01T12:00:00.000000'
         AND timestamp < '2025-03-01T12:00:00.000000'
         AND $group_0 = 'org:1' )
  GROUP BY distinct_id
  HAVING argMax(is_deleted, version) = 0
  '''
# ---
